[gd_scene load_steps=5 format=3 uid="uid://b0a2aay4a5yf0"]

[ext_resource type="Script" path="res://ui/menu.gd" id="1_5oftd"]
[ext_resource type="Theme" uid="uid://dtpd6n45jfurp" path="res://ui/ui_theme.tres" id="1_ksaso"]
[ext_resource type="PackedScene" uid="uid://d05bkcw5xfat1" path="res://ui/settings.tscn" id="2_v2eia"]
[ext_resource type="Texture2D" uid="uid://d1fcrclj0iysb" path="res://ui/title.png" id="4_nfxl2"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5oftd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.47451, 0.772549, 1)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = -205.0
offset_right = 243.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Settings")
focus_previous = NodePath("../Quit")
theme = ExtResource("1_ksaso")
text = "PLAY"

[node name="Tutorial" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_ksaso")
text = "TUTORIAL"

[node name="Settings" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
theme = ExtResource("1_ksaso")
text = "SETTINGS"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Play")
focus_previous = NodePath("../Settings")
theme = ExtResource("1_ksaso")
text = "QUIT"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -454.0
offset_top = 80.0
offset_right = 454.0
offset_bottom = 240.0
grow_horizontal = 2
texture = ExtResource("4_nfxl2")

[node name="Settings" parent="." instance=ExtResource("2_v2eia")]
visible = false
layout_mode = 1

[connection signal="button_down" from="Buttons/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="Buttons/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="Buttons/Quit" to="." method="_on_quit_button_down"]
